--- a/templates/api_testing.html
+++ b/templates/api_testing.html
@@ -108,10 +108,10 @@
                                 </h5>
                                 <p id="apiResultMessage" class="card-text"></p>
                                 <div class="d-flex gap-2 flex-wrap">
-                                    <a id="apiDownloadBtn" href="#" class="btn btn-success">
+                                    <a id="apiDownloadBtn" class="btn btn-success">
                                         <i class="fas fa-download me-2"></i>Download Report
                                     </a>
-                                    <a id="apiViewBtn" href="#" class="btn btn-outline-primary" target="_blank">
+                                    <a id="apiViewBtn" class="btn btn-outline-primary" target="_blank">
                                         <i class="fas fa-eye me-2"></i>View Report
                                     </a>
                                 </div>
